cmake_minimum_required(VERSION 3.13)
project(OpencvWorkspace)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(chapter_01)
add_subdirectory(chapter_03)
add_subdirectory(chapter_04)
add_subdirectory(chapter_05)
add_subdirectory(chapter_06)
add_subdirectory(chapter_07)
add_subdirectory(chapter_08)
add_subdirectory(chapter_09)
add_subdirectory(chapter_10)